[gd_scene load_steps=5 format=3 uid="uid://dv6xsolgl6p8v"]

[ext_resource type="Script" path="res://menu.gd" id="1_pbh8w"]
[ext_resource type="PackedScene" uid="uid://bbabrfq604tfg" path="res://audio_stream_player.tscn" id="2_6vo4d"]
[ext_resource type="Texture2D" uid="uid://dyonx13h1idpo" path="res://Menu backgrounds/Untitled design.jpg" id="3_idtol"]

[sub_resource type="Theme" id="Theme_fv7ey"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_fv7ey")
script = ExtResource("1_pbh8w")

[node name="UntitledDesign" type="Sprite2D" parent="."]
show_behind_parent = true
position = Vector2(574.75, 327.25)
scale = Vector2(0.592969, 0.593982)
texture = ExtResource("3_idtol")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -174.5
offset_top = -56.0
offset_right = 174.5
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start
"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="StoreButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Store"

[node name="TextEdit" type="TextEdit" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -304.0
offset_top = 78.0
offset_right = 341.0
offset_bottom = 186.0
grow_horizontal = 2
text = "TOP DOWN TACTICS"

[node name="AudioStreamPlayer" parent="." instance=ExtResource("2_6vo4d")]

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/StoreButton" to="." method="_on_store_button_pressed"]
